   the current channel has secure signaling and/or media.
 * For DAHDI/ISDN channels, the CHANNEL() dialplan function now supports the
   "no_media_path" option.
   Returns "0" if there is a B channel associated with the call.
   Returns "1" if no B channel is associated with the call.  The call is either
   on hold or is a call waiting call.

Dialplan Variables
------------------
 * Added DYNAMIC_FEATURENAME which holds the last triggered dynamic feature.
 * Added DYNAMIC_PEERNAME which holds the unique channel name on the other side
   and is set when a dynamic feature is triggered.
 * Added PARKINGLOT which can be used with parkeddynamic feature.conf option
   to dynamically create a new parking lot matching the value this varible is
   set to.
 * Added PARKINGDYNAMIC which represents the template parkinglot defined in
   features.conf that should be the base for dynamic parkinglots.
 * Added PARKINGDYNCONTEXT which tells what context a newly created dynamic
   parkinglot should have.
 * Added PARKINGDYNPOS which holds what parking positions a dynamic parkinglot
   should have.

Queue changes
-------------
  * A new config option, penaltymemberslimit, has been added to queues.conf.
    When set this option will disregard penalty settings when a queue has too
    few members.
  * A new option, 'I' has been added to both app_queue and app_dial.
    By setting this option, Asterisk will not update the caller with
    connected line changes or redirecting party changes when they occur.
  * A 'relative-peroidic-announce' option has been added to queues.conf.  When
    enabled, this option will cause periodic announce times to be calculated
    from the end of announcements rather than from the beginning.
  * The autopause option in queues.conf can be passed a new value, "all." The
    result is that if a member becomes auto-paused, he will be paused in all
	queues for which he is a member, not just the queue that failed to reach
	the member.
