@@ -88,6 +88,10 @@ From 1.6.2 to 1.8:
 * When a call is redirected inside of a Dial, the app and appdata fields of the
   CDR will now be set to "AppDial" and "(Outgoing Line)" instead of being blank.
 
+* The CDR handling of billsec and duration field has changed. If your table
+  definition specifies those fields as float,double or similar they will now
+  be logged with microsecond accuracy instead of a whole integer.
+
 From 1.6.1 to 1.6.2:
 
 * SIP no longer sends the 183 progress message for early media by
