@@ -8,3 +8,4 @@
 ;dispositionstring=yes
 ;table=cdr		;"cdr" is default table name
 ;usegmtime=no             ; set to "yes" to log in GMT
+;hrtime=yes		;Enables microsecond accuracy with the billsec and duration fields
